--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
   <link href="//localhost:4321/scss/style.min.css" rel="stylesheet" />
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
-  <link rel="icon" href="../images/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="//localhost:4321/images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="//localhost:4321/images/favicon.png" type="image/x-icon" />
   
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR%20GOOGLE%20ANALYTICS%20CODE"></script>
