blog update 2 mar25

--- a/public/index.html
+++ b/public/index.html
@@ -442,7 +442,7 @@ My family are the most important thing in the world. Traveling, watching classic
                     <div class="skill__progress_heading mb-5">
                         <span class="top-title pre-line">My Skills</span>
                         <h2 id="heres-where-i-can-help">Here&rsquo;s where I can help</h2>
-<p>I have a great background in Statistics, solid knowledge in  machine learning and business problem-solving.</p>
+<p>My Statistics &amp; machine learning background can assist you to solve your business problem(s).</p>
                     </div>
                     
                     
