--- a/public/index.html
+++ b/public/index.html
@@ -213,7 +213,7 @@
                             </svg>
                         </div>
                         <div class="mb-4 text-light">
-                            <h3 id="mehdi-looks-for-any-un-solved-porblems-or-examine-new-prospective-of-solved-ones-to">Mehdi looks for any un-solved porblems or examine new prospective of solved ones to.</h3>
+                            <h3 id="mehdi-looks-for-any-un-solved-problems-or-examine-new-prospective-of-solved-ones-to">Mehdi looks for any un-solved problems or examine new prospective of solved ones to:</h3>
 <p>design and present applications that his audience can find the answer pretain to thier input cicumetances. These applications should predict, evaluate and eventually render value for end-users.
 My family are the most important thing in the world. Traveling, watching classical or international movies, reading social and political articles/books and workout are items that I do my best to accomodate them in my life</p>
                         </div>
