--- a/public/index.html
+++ b/public/index.html
@@ -326,7 +326,7 @@ My family are the most important thing in the world. Traveling, watching classic
                             <h3 id="data-science--analysis">Data Science | Analysis</h3>
 <ul>
 <li>
-<p>Concern about &ldquo;Global Worming &amp; Polution&rdquo;, collecting, cleaning and visualizing data and applying Machine LEarning Algorithm to Predict the future gas emission/</p>
+<p>Concern about &ldquo;Global Warming &amp; Polution&rdquo;, collecting, cleaning and visualizing data and applying Machine LEarning Algorithm to Predict the future gas emission/</p>
 </li>
 <li>
 <p>Using tsv data from IMDB Non-comercial website and applying various regression and algorithm to rate the movies based on some major crew of each movie (See <a href="https://developer.imdb.com/non-commercial-datasets/">IMDB</a>)</p>
@@ -351,7 +351,7 @@ My family are the most important thing in the world. Traveling, watching classic
 <h4 id="snc-lavalin--worley-parson">SNC Lavalin | Worley Parson</h4>
 <ul>
 <li>Designed and analyzed pipe stress for Various Mining and Oil &amp; Gas Projects</li>
-<li>Applied codes and standards along wiht CAESAR II and collaborated with various stakeholder.</li>
+<li>Applied codes and standards along with CAESAR II and collaborated with various stakeholder.</li>
 </ul>
 
                         </div>
