--- a/public/portfolio/project-01/index.html
+++ b/public/portfolio/project-01/index.html
@@ -145,7 +145,7 @@
             <div class="case-details-service">
               <h3>Solution</h3>
               <p>
-                This application helps all the stakeholder to be prepared, designed and executed plans to eleminate or reduce the cause in advance by using machine learning. The application is built after complition of <a href="https://university.business-science.io/p/5-course-bundle-machine-learning-web-apps-time-series">5-Course R-Track System</a>.
+                This application helps all the stakeholder to be prepared, designed and executed plans to eliminate or reduce the cause in advance by using machine learning. The application is built after completion of <a href="https://university.business-science.io/p/5-course-bundle-machine-learning-web-apps-time-series">5-Course R-Track System</a>.
               </p>
             </div>
           </div>
