--- a/public/index.html
+++ b/public/index.html
@@ -659,7 +659,7 @@ My family are the most important thing in the world. Traveling, watching classic
 					
 					<div class="text-light footer__cta_content">
 						<span>Contact Mehdi</span>
-						<h2 class="mb-0"><h3 id="in-order-to-have-a-discussion-please-send-you-message">In order to have a discussion please send you message:</h3>
+						<h2 class="mb-0"><h3 id="in-order-to-have-a-discussion-please-send-your-message">In order to have a discussion please send your message:</h3>
 </h2>
 					</div>
 					
