march 24 8:47pm update

--- a/public/index.html
+++ b/public/index.html
@@ -308,7 +308,7 @@
                         
                         
                         <div class="resume__education_item">
-                            <span class="pre-line text-primary"> 2020-Present </span>
+                            <span class="pre-line text-primary"> 2020- </span>
                             <h3 id="data-science--analysis">Data Science | Analysis</h3>
 <h5 id="arona-chemie-co">Arona-Chemie Co</h5>
 <ul>
