2nd march 25 2025 at 3:16pm

--- a/public/index.html
+++ b/public/index.html
@@ -201,7 +201,7 @@
                         </div>
                         <div class="mb-4 text-light">
                             <h3 id="mehdi-specializes-in-developing-and-deploying-generative-models-such-as-llms-to-create-text-or-other-ai-generated-content">Mehdi specializes in developing and deploying generative models (such as LLMs) to create text or other AI-generated content.</h3>
-<p>He trains and optimizes models, engineeering effective prompts, and implementing retrieval-augmented generation (RAG) system to enhance output quality.</p>
+<p>He trains and optimizes models, engineering effective prompts, and implementing retrieval-augmented generation (RAG) system to enhance output quality. He assists your organization by  automating much of the lower-level business analytics logic.</p>
                         </div>
                         <div>
                             <a class="btn btn-primary mr-3 btn-zoom"
