--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
             </svg>
           </div>
           <div class="mb-5">
-            <span class="top-title pre-line">Generative AI Data Scientist</span>
+            <span class="top-title pre-line">AI-Powered Data Scientist</span>
             <h2 id="hi-my-name-is-mehdi">Hi my name is Mehdi</h2>
 <p>I&rsquo;m passionate about the exciting, ever-changing world of data science, and I&rsquo;m all about using Generative AI to make a difference. Check out my <a href="https://www.linkedin.com/in/mehdiyazdanian/">LinkedIn</a>, Let me assist you or your team to ask the right questions and find meaningful answers.</p>
           </div>
